[gd_scene load_steps=7 format=3 uid="uid://bun4yijhd5307"]

[ext_resource type="Texture2D" uid="uid://bil1yniup2xa7" path="res://Assets/UI/BackGround.png" id="1_66wqk"]
[ext_resource type="Script" path="res://Scene/UIScenes/mainmenu.gd" id="1_epmi1"]
[ext_resource type="Texture2D" uid="uid://lo6dr11lginq" path="res://Assets/UI/button/Button_Hover_3Slides.png" id="1_w3hcf"]
[ext_resource type="Texture2D" uid="uid://dfhyvhmpxuety" path="res://Assets/UI/button/Button_Disable_3Slides.png" id="2_1ebo5"]
[ext_resource type="PackedScene" uid="uid://fk1a4pokv5tg" path="res://Scene/volume_slider.tscn" id="5_ufvu2"]
[ext_resource type="AudioStream" uid="uid://dcprohsmhb8xi" path="res://Assets/music/main menu.mp3" id="6_bygqm"]

[node name="mainmenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_epmi1")

[node name="background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_66wqk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = 25.0
offset_right = -25.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 12
theme_override_constants/separation = 20
alignment = 1

[node name="NewGame" type="TextureButton" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("1_w3hcf")
texture_pressed = ExtResource("2_1ebo5")
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/NewGame"]
layout_mode = 0
offset_left = 15.0
offset_top = 1.0
offset_right = 287.0
offset_bottom = 58.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "New Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Option" type="TextureButton" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("1_w3hcf")
texture_pressed = ExtResource("2_1ebo5")
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Option"]
layout_mode = 0
offset_left = 15.0
offset_top = 1.0
offset_right = 287.0
offset_bottom = 58.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Option"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Quit" type="TextureButton" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("1_w3hcf")
texture_pressed = ExtResource("2_1ebo5")
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Quit"]
layout_mode = 0
offset_left = 15.0
offset_top = 1.0
offset_right = 287.0
offset_bottom = 58.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Quit
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Option" type="Panel" parent="."]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 394.0
offset_top = 166.0
offset_right = 895.0
offset_bottom = 679.0

[node name="ColorRect" type="ColorRect" parent="Option"]
layout_mode = 0
offset_right = 501.0
offset_bottom = 513.0
color = Color(1, 0.760784, 0.447059, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Option"]
layout_mode = 0
offset_left = 23.0
offset_top = 17.0
offset_right = 487.0
offset_bottom = 430.0
theme_override_constants/separation = 40

[node name="Label" type="Label" parent="Option/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Option"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Option/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "Sound"
horizontal_alignment = 1
vertical_alignment = 1

[node name="volume_slider" parent="Option/VBoxContainer/Label2" instance=ExtResource("5_ufvu2")]
layout_mode = 2
offset_top = 46.0
offset_right = 464.0
offset_bottom = 62.0
step = 0.1

[node name="Back" type="Button" parent="Option/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Back"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_bygqm")
autoplay = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Option/VBoxContainer/Back" to="." method="_on_back_pressed"]
